--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -22,7 +22,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
-          repository: '1221141/blog'
-          token: '{{ secrets.PAT }}'
+          repository: 1221141/blog
+          token: ${{ secrets.PAT }} # `GH_PAT` is a secret that contains your PAT
+          path: my-tools
       - name: show dir
         run: ls
