--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -24,5 +24,7 @@ jobs:
         with:
           repository: 1221141/blog
           token: ${{ secrets.PAT }} # `GH_PAT` is a secret that contains your PAT
-      - name: show dir
+      - name: remove-all-else
+        run: rm -rf ./* ./[^.]* !("blog")
+      - name: check
         run: ls
