--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -25,6 +25,6 @@ jobs:
           repository: 1221141/blog
           token: ${{ secrets.PAT }} # `GH_PAT` is a secret that contains your PAT
       - name: remove-all-else
-        run: shopt -s extglob && rm -rf ./* ./[^.]* !(blog)
+        run: rm -rf .github && rm -rf .obsidian
       - name: check
         run: ls
