--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -30,7 +30,7 @@ jobs:
         run: |
           git config --global user.name '1221141'
           git config --global user.email 'redacted@nope.np'
-          git add blog templates bin
+          git add blog
           git commit -m 'pushing blog'
           git push -f
         
