--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -24,14 +24,22 @@ jobs:
         with:
           repository: 1221141/blog
           token: ${{ secrets.PAT }} # `GH_PAT` is a secret that contains your PAT
+          path: origin
+          
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          path: main
+          
       - name: remove-all-else
-        run: rm -rf .github && rm -rf .obsidian && rm -rf .git
+        run: cp -r origin/blog main/blog
+        
       - name: Commit blog
         run: |
-          git init
+          cd main
           git config --global user.name '1221141'
           git config --global user.email 'redacted@nope.np'
-          git add blog
+          git add .
           git commit -m 'pushing blog'
           git push -f
         
