--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -33,7 +33,7 @@ jobs:
           token: ${{ secrets.PAT }}
 
       - name: remove-all-else
-        run: cp -r origin/blog main/blog
+        run: cp -r origin/blog main/
         
       - name: Commit blog
         run: |
