--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -33,7 +33,7 @@ jobs:
           token: ${{ secrets.PAT }}
 
       - name: remove-all-else
-        run: cp -r origin/blog main/
+        run: rm -rf main/blog && cp -r origin/blog main/
       - uses: ruby/setup-ruby@v1
         with:
           ruby-version: '3.0'
