--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -30,7 +30,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           path: main
-          token: ${{ secrets.PAT }}
+          token: ${{ secrets.tiddlywiki  }}
 
       - name: remove-all-else
         run: rm -rf main/blog && cp -r origin/blog main/
